# gnome-software

./: .gitlab-ci.yml  Makefile.am  configure.ac  git.mk  meson.build  meson_options.txt  meson_post_install.sh
.tx/: config
contrib/: gnome-software.spec.in
data/: Makefile.am  com.endlessm.SystemExternalApps.policy.in  com.endlessm.SystemExternalApps.rules.in  eam-service-interface.xml  eam-transaction-interface.xml  eos-external-apps-enable.service.in  eos-external-apps.conf  g-s-helper.conf  meson.build  org.gnome.Software.mime.xml  org.gnome.software.gschema.xml
data/appdata/: org.gnome.Software.appdata.xml.in
data/icons/: Makefile.am
data/icons/categories/: Makefile.am
data/icons/hicolor/: Makefile.am  meson.build
data/icons/hicolor/64x64/: Makefile.am
data/metainfo/: org.gnome.Software.metainfo.xml.in
debian/: changelog  control  control.in  copyright  gnome-software-common.install  gnome-software-dev.install  gnome-software-plugin-flatpak.install  gnome-software-plugin-limba.install  gnome-software-plugin-snap.install  gnome-software.gsettings-override.in  gnome-software.install  gnome-software.postinst  gnome-software.postrm  postinst  rules  watch
debian/patches/: 0011-Support-snap-channels.patch  0020-details-page-Don-t-show-missing-screenshot-placehold.patch  0021-details-Use-custom-icon-for-verified-developers.patch  01_appstream1.0-support.patch  01_details-Use-custom-icon-for-verified-developers.patch  Fix-loading-OS-AppStream-catalog-data-if-it-is-available-.patch  series
debian/patches/debian/: use-software-properties-gtk.patch
debian/upstream/: metadata
doc/api/: Makefile.am  gnome-software-docs.xml
lib/: Makefile.am  gnome-software.h  gs-app-list-private.h  gs-app-list.c  gs-app-list.h  gs-app-private.h  gs-app.c  gs-app.h  gs-category.c  gs-category.h  gs-cmd.c  gs-debug.c  gs-metered.c  gs-metered.h  gs-os-release.c  gs-plugin-job-private.h  gs-plugin-job.c  gs-plugin-job.h  gs-plugin-loader-sync.c  gs-plugin-loader-sync.h  gs-plugin-loader.c  gs-plugin-loader.h  gs-plugin-private.h  gs-plugin-types.h  gs-plugin-vfuncs.h  gs-plugin.c  gs-plugin.h  gs-refine.c  gs-refine.h  gs-self-test.c  gs-utils.c  gs-utils.h  meson.build
plugins/: Makefile.am  meson.build
plugins/core/: gs-appstream.c  gs-appstream.h  gs-desktop-common.c  gs-desktop-common.h  gs-plugin-appstream.c  gs-plugin-desktop-categories.c  gs-plugin-generic-updates.c  gs-plugin-hardcoded-featured.c  gs-plugin-hardcoded-popular.c  gs-plugin-key-colors.c  gs-plugin-provenance-license.c  gs-plugin-provenance.c  gs-self-test.c
plugins/dummy/: gs-plugin-dummy.c  gs-self-test.c
plugins/eos/: Makefile.am  gs-flatpak-app.c  gs-flatpak-app.h  gs-flatpak-symlinks.c  gs-flatpak-symlinks.h  gs-flatpak-utils.c  gs-flatpak-utils.h  gs-flatpak.c  gs-flatpak.h  gs-legacy-external-apps.h  gs-plugin-eos.c  gs-plugin-eos.h  gs-plugin-external-runtimes-cleaner.c  gs-plugin-legacy-external-apps.c  meson.build
plugins/eos-blacklist/: gs-plugin-eos-blacklist.c  meson.build
plugins/eos-blocklist/: gs-plugin-eos-blocklist.c  gs-plugin-eos-blocklist.h  meson.build
plugins/eos-updater/: gs-plugin-eos-updater.c  meson.build
plugins/external-appstream/: gs-install-appstream.c
plugins/fedora-langpacks/: gs-self-test.c
plugins/fedora-pkgdb-collections/: gs-plugin-fedora-pkgdb-collections.c
plugins/flatpak/: gs-flatpak-app.c  gs-flatpak-app.h  gs-flatpak-transaction.c  gs-flatpak-transaction.h  gs-flatpak-utils.c  gs-flatpak.c  gs-flatpak.h  gs-plugin-flatpak.c  gs-self-test.c  meson.build
plugins/flatpak/tests/: build.py  meson.build
plugins/fwupd/: gs-fwupd-app.c  gs-plugin-fwupd.c
plugins/malcontent/: gs-plugin-malcontent.c
plugins/modalias/: gs-plugin-modalias.c  gs-self-test.c
plugins/ostree/: gs-plugin-rpm.c
plugins/packagekit/: gs-plugin-packagekit-local.c  gs-plugin-packagekit-refine.c  gs-plugin-packagekit-refresh.c  gs-plugin-packagekit.c  gs-plugin-systemd-updates.c
plugins/rpm-ostree/: gs-plugin-rpm-ostree.c
plugins/shell-extensions/: gs-plugin-shell-extensions.c
plugins/snap/: gs-plugin-snap.c
po/: LINGUAS  POTFILES.in  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  (+85 more)
src/: Makefile.am  discovery-feed-content-provider-dbus-interfaces.xml  eos-external-build-install  gnome-software-local-file.desktop.in  gnome-software.gresource.xml  gnome-software.ui  gs-app-context-bar.c  gs-app-context-bar.ui  gs-app-list-private.h  gs-app-list.c  gs-app-list.h  gs-app-row.c  gs-app-row.ui  gs-app-tile.c  gs-app.c  gs-app.h  gs-application.c  gs-background-tile.c  gs-background-tile.h  gs-background-tile.ui  gs-category-page.c  gs-category-page.ui  gs-category-tile.c  gs-category-tile.h  gs-common.c  gs-details-page.c  gs-details-page.ui  gs-discovery-feed-content-provider.c  gs-discovery-feed-content-provider.h  gs-image-tile.c  gs-image-tile.h  gs-image-tile.ui  gs-installed-page.c  gs-loading-page.c  gs-loading-page.ui  gs-menus.ui  gs-moderate-page.c  gs-os-release.c  gs-os-release.h  gs-overview-page.c  (+42 more)
src/plugins/: Makefile.am  eos-external-apps-build-install  eos-external-apps-enable  eos-external-apps-remove  gs-appstream.c  gs-appstream.h  gs-desktop-common.c  gs-flatpak-symlinks.c  gs-flatpak-symlinks.h  gs-flatpak.c  gs-flatpak.h  gs-install-appstream.c  gs-plugin-appstream.c  gs-plugin-dummy.c  gs-plugin-eos-legacy-bundles.c  gs-plugin-eos.c  gs-plugin-epiphany.c  gs-plugin-external-apps.c  gs-plugin-external-appstream.c  gs-plugin-external-runtimes-cleaner.c  gs-plugin-fedora-distro-upgrades.c  gs-plugin-flatpak-appstream.c  gs-plugin-flatpak-custom.c  gs-plugin-flatpak-system.c  gs-plugin-flatpak-user.c  gs-plugin-hardcoded-featured.c  gs-plugin-key-colors.c  gs-plugin-legacy-external-apps.c  gs-plugin-odrs.c  gs-plugin-shell-extensions.c  gs-plugin-xdg-app-reviews.c
tests/: basic.py
