install_data('16x16/org.gnome.Software.png',
             install_dir : 'share/icons/hicolor/16x16/apps')
install_data('24x24/org.gnome.Software.png',
             install_dir : 'share/icons/hicolor/24x24/apps')
install_data('64x64/org.gnome.Software.png',
             install_dir : 'share/icons/hicolor/64x64/apps')
install_data('symbolic/org.gnome.Software-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
install_data('scalable/software-installed-symbolic.svg',
             install_dir : 'share/icons/hicolor/scalable/status')
